--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
 	<title>XTT</title>
+<!--===============================================================================================-->
 	<meta charset="UTF-8">
+<!--===============================================================================================-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
+<!--===============================================================================================-->
+	<script async src="https://popularity.goxtt.net/xttpopularity.js" data-ackee-server="https://popularity.goxtt.net" data-ackee-domain-id="dc196bee-f1ea-4f18-9b60-1d2468792b87"></script>
+<!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="images/icons/favicon.png"/>
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
