--- a/xsi/wifiaup.html
+++ b/xsi/wifiaup.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Self Service Support, Contact Our Support Team">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Support</title>
+    <title>XTT WiFi ToS/AUP</title>
     <link rel="stylesheet" href="https://support.goxtt.com/nicepage.css" media="screen">
     <style>
       /* The alert message box */
